tests/invalid/undeclared-input.pkl
/// Invariant 10 (hermetic eval): reading an input that is not declared
/// in the workflow's input schema fails eval.
module tests.invalid.undeclaredInput

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../support/testkit.pkl"

res: resource.EphemeralResource = new {
  name = "res"
  provider = new testkit.TestProvider { provides { "bash" } }
}

h: host.Host = new { name = "h"; backedBy = res }

j: job.Job = new {
  name = "j"
  runsOn = h
  actions {
    new testkit.TestAction {
      name = "a"
      requires { "bash" }
      env { ["V"] = module.input("version") }  // not declared in wf.inputs
    }
  }
}

wf {
  name = "bad"
  inputs {}  // empty schema
  resources { res }
  hosts { h }
  jobs { j }
}
